--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
+    
     <title>Pet Store Grooming</title>
 </head>
 <body>
     <!--nav - 1-->
     <nav>
-        <h2>Pet Store Grooming</h2>
+        <h2>Clube Pet</h2>
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Sobre</a></li>
@@ -24,7 +25,7 @@
     <div class="sidebar">
         <h2>Menu</h2>
         <ul>
-            <li><a href="#">Login</a></li>
+            <li><a href="login.html">Login</a></li>
             <li><a href="#">Cadastro</a></li>
             <li><a href="#">Serviços</a></li>
             <li><a href="#">Localização</a></li>
@@ -34,8 +35,9 @@
     <main>
         <!--Section 1-->
         <section class="section-1">
-            <h2>Pet Store Grooming</h2>
-            <p> Aqui você encontra o que hé de melhor para seu prt:
+            <h2>Clube Pet</h2>
+            <img src="imgs/local.pet.jpg" alt="fechado">
+            <p> Aqui você encontra o que há de melhor para seu pet:
                 alimentos, suplimentos, medicamentos, banho, tosa e muito mais... </p>
         </section>
         <!--section 2-->
@@ -54,14 +56,15 @@
             </div>
         </section>
         <!--Articule -->
-        <articule>
+        <article>
             <h2>Depoimentos</h2>
-            <p>Gostaria de expressar minha sincera gratidão a todos da equipe do Pet Store Gooming! Desde o primeiro contato, fui 
-                recebido com muito carinho e atenção. O atendim4ento foi expetacular e todos demonstraram um profundo conhecimento sobre os cuidados 
-                com os pets. Meu Snoopy ficou suoper feliz e bem tratado durante a visita!
-                  att. Loise
+            <img src="imgs/dono.cachorr.avif" alt="fechado">
+            <p>Gostaria de expressar minha sincera gratidão a todos da equipe do Pet Shop! Desde o primeiro contato, fui 
+                recebido com muito carinho e atenção. <br>O atendimento foi expetacular e todos demonstraram um profundo conhecimento sobre os cuidados 
+                com os pets. Meu Snoopy ficou suoper feliz e bem tratado durante a visita! <br>
+                  Att. Loise
             </p>
-        </articule>
+        </article>
         <!--Cards -->
         <div class="cards">
             <div class="card">
